Moved TickProcessingContext creation to TickRunner
-this is to better encapsulate some of the context responsibilities but is mostly to make it possible to invoke these *Processor helpers in different ways, going forward
-ultimately, the goal here is to decouple CrowdProcessor's specific logic from the Entity type so that this tool can be used to concurrently handle players along with other kinds of entities like animals and monsters
-additionally, this improved flexibility should alleviate the need for the client to fake-up a whole Entity for all other clients, even though it doesn't have any of the associated information
-note that that this may cause memory usage concerns, during ticks, as a result of the now-long-lived BasicBlockProxyCache instances